2006-03-18  Jan Schampera <jan.schampera@unix.net>

	* src/gui/preferences.cpp: Hopefully fix filedialog issues on WIN32
	related to MIME filtering not present

2006-03-18  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Partial fix for bug #334685.

2006-03-16  Vladimer Sichinava <alinux@siena.linux.it>

	* configure.in: added "ka" Georgian entry
	to ALL_LINGUAS.

2006-03-16  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Made some variables more explicit to be
	able to work properly on #334685.

2006-03-14  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented version number to 2.0.1. Incremented
	OPAL Required version to 2.2.1.

	* Makefile.am: Applied patch from Stefan Bruens. Thanks!

v2_0_0
2006-03-12  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented version number to 2.00.

2006-03-12  Damien Sandras  <dsandras@gnome.org>

	* pixmaps/ekiga.png:
	Committed new version of the icon thanks to 
	Andreas Kwiatkowski <post ATATAT kwiat DOTDOT org>.

	* src/gui/callbacks.cpp, AUTHORS:
	Added Fabian Deutsch (website) and Andreas Kwiatkowski (graphic arts) to
	the artwork section.

	* src/devices/audio.cpp:
	Added dirty workaround for stupid Esound.

	* help/fr/figures/audio_codecs.png help/fr/figures/call_d1.png 
	help/fr/figures/config_d1.png help/fr/figures/config_d10.png 
	help/fr/figures/config_d2.png help/fr/figures/config_d3.png 
	help/fr/figures/config_d4.png help/fr/figures/config_d5.png 
	help/fr/figures/config_d6.png help/fr/figures/config_d7.png 
	help/fr/figures/config_d8.png help/fr/figures/config_d9.png 
	help/fr/figures/accounts_d1.png 
	help/fr/figures/accounts_h323.png 
	help/fr/figures/accounts_sip.png help/fr/figures/chat_d1.png:
	Updated french figures.

	* lib/gui/gmstockicons.c lib/gui/gmstockicons.h 
	pixmaps/Makefile.am pixmaps/ekiga-logo.png 
	pixmaps/text_logo.xpm src/devices/fakevideoinput.cpp 
	src/gui/chat.cpp src/gui/druid.cpp src/gui/history.cpp 