@@ -1,3 +1,7 @@
+2006-03-18  Julien Puydt  <jpuydt@free.fr>
+
+	* src/gui/addressbook.cpp: Fixed #334685.
+
 2006-03-18  Jan Schampera <jan.schampera@unix.net>
 
 	* src/gui/preferences.cpp: Hopefully fix filedialog issues on WIN32
